# FastCLAM

./: .flake8  .gitignore  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: CD.yml  CI.yml  black.yml  build.yml  docs.yml  lint.yml  pytest.yml  release.yml
0.1/: 404.html  index.html  objects.inv
0.1/reference/: index.html
0.1/reference/app/: index.html
0.1/reference/models/: index.html
0.1/search/: search_index.json
docs/: index.md
docs/reference/: app.md  index.md  models.md
fastclam/: __init__.py  app.py  log.py  models.py  version.py
tests/: test_app.py
