[project]
name = "FastCLAM"
dynamic = ['version']
description = "FastAPI for CLAMS utilities"
authors = [{ name = "WGBH-MLA", email = "ryan_harbert@wgbh.org" }]
dependencies = [
    "clams-python~=1.0",
    "mmif-python~=1.0",
    "pydantic~=1.10",
    "fastapi~=0.100",
    "loguru~=0.7",
    "rich~=13.5",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ['pdm-backend']
build-backend = 'pdm.backend'

[tool.ruff.flake8-quotes]
inline-quotes = 'single'

[tool.pdm]
version = { source = 'file', path = 'fastclam/_version.py' }

[tool.pdm.dev-dependencies]
dev = [
    "uvicorn~=0.23",
    "black~=23.7",
    "ruff~=0.0",
]
test = [
    "pytest~=7.4",
    "pytest-cov~=4.1",
    "httpx~=0.24",
]
