[project]
name = "FastCLAM"
dynamic = ['version']
description = "FastAPI for CLAMS utilities"
authors = [{ name = "WGBH-MLA", email = "ryan_harbert@wgbh.org" }]
dependencies = [
    "clams-python>=1.1.2",
    "mmif-python>=1.0.9",
    "pydantic>=1.10.14",
    "fastapi>=0.109.2",
    "loguru>=0.7.2",
    "rich>=13.7.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ['pdm-backend']
build-backend = 'pdm.backend'

[tool.ruff.flake8-quotes]
inline-quotes = 'single'

[tool.pdm]
version = { source = 'file', path = 'fastclam/_version.py' }

[tool.pdm.dev-dependencies]
dev = [
    "uvicorn>=0.27.1",
    "black>=24.2.0",
    "ruff>=0.2.2",
]
test = [
    "pytest>=8.0.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]
